feat: add test data, fix lazy loading, deploy config and updated README
- DataInitializer: seed 8 movies, 23 sessions and 3 test reservations
- Fix LazyInitializationException on Filme.sessoes and Sessao.filme
- Fix movie image rendering for external URLs (TMDB)
- Add Dockerfile, railway.toml and nixpacks.toml for Railway deploy
- Update application.properties for PORT and COOKIE_SECURE env vars
- Update README with live demo link, tech stack and deploy instructions

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>